# Auramusic-v1

./: .env.example  .gitignore  LICENSE  README.md  build.gradle.kts  build_log.txt  build_output.txt  gradle.properties  gradlew  local.properties.example  settings.gradle.kts
.github/workflows/: android-build.yml  release.yml
app/: build.gradle.kts  google-services.json  lint.xml  proguard-rules.pro  signing-config.gradle.kts
app/keystore/: debug.keystore.txt  release.keystore.txt
app/schemas/com.auramusic.app.data.local.AppDatabase/: 1.json
app/schemas/com.auramusic.app.db.InternalDatabase/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/vibrafp/lib/: CMakeLists.txt  vibra_fp.cpp
app/src/main/res/: resources.properties
app/src/main/res/drawable/: ic_album.xml  ic_drag_handle.xml  ic_launcher_background_v31.xml  ic_lyrics.xml  ic_music_note.xml  ic_person.xml  ic_playlist.xml  ic_queue.xml  ic_repeat_one.xml  ic_search.xml  ic_shuffle_off.xml  ic_skip_next.xml  ic_sync_off.xml  paypal.xml
app/src/main/resources/: resources.properties
betterlyrics/: build.gradle.kts
gradle/: libs.versions.toml
innertube/: build.gradle.kts
kizzy/: build.gradle.kts
kugou/: build.gradle.kts
lastfm/: build.gradle.kts
lrclib/: build.gradle.kts
shazamkit/: build.gradle.kts
simpmusic/: build.gradle.kts
(+464 files in other folders)
